# Slang_Java

./: .gitignore  CMakeLists.txt  build.gradle.kts  settings.gradle.kts
native/: build.gradle.kts
native/src/main/cpp/: slangJava.cpp
native/src/main/public/: slangJava.h
src/main/java/net/irisshaders/slang/: FileFinder.java  FileFinderFunction.java  ModuleIR.java  ReflectedVariable.java  Slang.java  SlangCompile.java  SlangEntryPoint.java  SlangLink.java  SlangModule.java  SlangSession.java  VariableType.java
